# Azzmos-0.1.1

./: Makefile.am  Makefile.in  configure  configure.ac
include/: Makefile.am  Makefile.in
include/azzmos/: common.h  urinorm.h  uriobj.h  utils.h
lib/: Makefile.am  Makefile.in  urinorm.c  uriobj.c  utils.c
src/: Makefile.am  Makefile.in  urinorm.c  urinorm.h  uriresolve.c  uriresolve.h
test/: Makefile.am  Makefile.in  test_regexpr.c  test_resolve.c  test_uriobj.c
